36, 40, 46, 47, 48, 59, 60
40 - Collectors.groupingBy(String::length) : length를 키로 가지고, 값은 해당 길이를 가진 리스트를 반환함

IntStream 복습 필요

60 복습 복잡한로직